--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -1,39 +1,26 @@
 <!-- element 1  What is arche? -->
-<div className="w-full justify-center">
-    <div className="grid grid-cols-6 gap-4">
-        <div className="col-span-4 col-start-2">
-            <div className="w-full">
-                <div className="my-12 text-center">
-                    <p className="section-header-title-small">
+<div class="w-full justify-center">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
+                    <p class="section-header-title-small">
                         {{ element_1.title_small }}
                     </p>
-                    <h2 className="section-header-title">{{ element_1.title }}</h2>
+                    <h2 class="section-header-title">{{ element_1.title }}</h2>
                 </div>
             </div>
         </div>
     </div>
 
-    <div className="grid grid-cols-6 gap-4">
-        <div className="col-span-3 ">
-            <div className="text-center">element_1.content_left</div>
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-3 ">
+            <div class="text-center"> {{ element_1.content_left }}</div>
         </div>
-        <div className="col-span-3 ">
-            <div className="my-12 xl:text-left">element_1.content_right</div>
+        <div class="col-span-3 ">
+            <div class="my-12 xl:text-left"> {{ element_1.content_right }}</div>
         </div>
     </div>
-
-
-    <div class="my-12 text-center">
-        <p class="section-header-title-small">
-            {{ element_1.content_left }}
-        </p>
-        <h2 class="section-header-title">
-            {{ element_1.content_right }}
-        </h2>
-    </div>
-
-
-
 
 
     <div class="container px-12 mt-4">
