--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -14,18 +14,19 @@
     </div>
 
     <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-3 ">
-            <div class="text-center"> {{ element_1.content_left }}</div>
-        </div>
-        <div class="col-span-3 ">
-            <div class="my-12 xl:text-left"> {{ element_1.content_right }}</div>
+        <div class="col-span-4 col-start-2">
+            <div class="col-span-3 ">
+                <div class="text-center"> {{ element_1.content_left }}</div>
+            </div>
+            <div class="col-span-3 ">
+                <div class="my-12 xl:text-left"> {{ element_1.content_right }}</div>
+            </div>
         </div>
     </div>
 
-
-    <div class="container px-12 mt-4">
-        <div class="grid grid-cols-12 items-center justify-center gap-x-12">
-            <div class="col-span-12">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
                 <div class="my-12 text-center">
                     <p class="section-header-title-small">
                         {{ element_2.title_small }}
@@ -38,8 +39,9 @@
         </div>
     </div>
 
-    <div class="w-full resources-container-home pt-12">
-        <div class="w-full">
+    <div class="grid grid-cols-6 gap-4 resources-container-home">
+        <div class="col-span-4 col-start-2">
+
             <div class="container px-4">
                 <div class="grid grid-cols-12 gap-x-12 justify-center">
                     <!-- Card 1 -->
