--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -15,11 +15,13 @@
 
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
-            <div class="col-span-3 ">
-                <div class="text-center"> {{ element_1.content_left }}</div>
-            </div>
-            <div class="col-span-3 ">
-                <div class="my-12 xl:text-left"> {{ element_1.content_right }}</div>
+            <div class="w-full">
+                <div class="col-span-3 ">
+                    <div class="text-center"> {{ element_1.content_left }}</div>
+                </div>
+                <div class="col-span-3 ">
+                    <div class="my-12 xl:text-left"> {{ element_1.content_right }}</div>
+                </div>
             </div>
         </div>
     </div>
