--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -15,12 +15,12 @@
 
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
-            <div class="w-full">
+            <div class="grid grid-cols-6 gap-4">
                 <div class="col-span-3 ">
-                    <div class="text-center"> {{ element_1.content_left }}</div>
+                    <div class="text-center">{{ element_1.content_left }}</div>
                 </div>
                 <div class="col-span-3 ">
-                    <div class="my-12 xl:text-left"> {{ element_1.content_right }}</div>
+                    <div class="my-12 xl:text-left">{{ element_1.content_right }}</div>
                 </div>
             </div>
         </div>
@@ -41,6 +41,7 @@
         </div>
     </div>
 
+    
     <div class="grid grid-cols-6 gap-4 resources-container-home">
         <div class="col-span-4 col-start-2">
 
