--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -137,7 +137,7 @@
                       </a>
                     </h5>
                     <p class="card-text home-resources-text">
-                      element_2.card_3_text }}
+                      {{ element_2.card_3_text }}
                     </p>
                     <p class="mt-auto">
                       <a
