--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -182,6 +182,11 @@
                             <div class="loader" id="home-slider-loader">
                                 &nbsp;
                             </div>
+                            <div
+                                data-component="carousel"
+                                data-endpoint="/api/topcollections/12/en"
+                                >
+                            </div>
 
                             <div
                                 class="carousel slide"
