--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -46,110 +46,119 @@
     <div class="grid grid-cols-6 gap-4 resources-container-home">
         <div class="col-span-4 col-start-2">
             <div class="w-full">
-                <div class="grid grid-cols-12 gap-6">                
-                    <div class="col-span-3 col-start-2 lg:col-span-3 xl:col-span-3 mb-12">
-                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                            <div class="mb-6 flex items-center justify-center">
-                                <img
-                                    class="card-img-top home-resources-images w-full h-auto"
-                                    src="{{ element_2.card_1_image }}"
-                                    alt="{{ element_2.card_1_title }}"
-                                    width="165"
-                                    height="138"
-                                    />
-                            </div>
-                            <div class="card-body home-resources-body p-4">
-                                <h5 class="card-title mb-3 text-center">
-                                    <a
-                                        class="home-resources-title"
-                                        href="{{ element_2.card_1_url }}"
-                                        >
-                                        {{ element_2.card_1_title }}
-                                    </a>
-                                </h5>
-                                <p class="card-text home-resources-text">
-                                    {{ element_2.card_1_text }}
-                                </p>
-                                <p class="mt-auto">
-                                    <a
-                                        class="btn basic-arche-btn home-resources-btn"
-                                        href="{{ element_2.card_1_url }}"
-                                        >
-                                        Show
-                                    </a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-span-3 lg:col-span-3 xl:col-span-3 mb-12">
-                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                            <div class="mb-6 flex items-center justify-center">
-                                <img
-                                    class="card-img-top home-resources-images w-full h-auto"
-                                    src="{{ element_2.card_2_image }}"
-                                    alt="{{ element_2.card_2_title }}"
-                                    width="165"
-                                    height="136"
-                                    />
-                            </div>
-                            <div class="card-body home-resources-body p-4">
-                                <h5 class="card-title mb-3 text-center">
-                                    <a
-                                        class="home-resources-title"
-                                        href="{{ element_2.card_2_url }}"
-                                        >
+                <div class="grid grid-cols-12">     
+                    <div className="col-span-12">
+                        <div className="mx-auto max-w-screen-xl px-6">
+                            <div className="grid gap-6 sm:grid-cols-2 lg:grid-cols-3 justify-items-center">
+                                <!-- CARD -->
+                                <div class="w-full max-w-sm">
+                                    <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                                        <div class="mb-6 flex items-center justify-center">
+                                            <img
+                                                class="card-img-top home-resources-images w-full h-auto"
+                                                src="{{ element_2.card_1_image }}"
+                                                alt="{{ element_2.card_1_title }}"
+                                                width="165"
+                                                height="138"
+                                                />
+                                        </div>
+                                        <div class="card-body home-resources-body p-4">
+                                            <h5 class="card-title mb-3 text-center">
+                                                <a
+                                                    class="home-resources-title"
+                                                    href="{{ element_2.card_1_url }}"
+                                                    >
+                                                    {{ element_2.card_1_title }}
+                                                </a>
+                                            </h5>
+                                            <p class="card-text home-resources-text">
+                                                {{ element_2.card_1_text }}
+                                            </p>
+                                            <p class="mt-auto">
+                                                <a
+                                                    class="btn basic-arche-btn home-resources-btn"
+                                                    href="{{ element_2.card_1_url }}"
+                                                    >
+                                                    Show
+                                                </a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
 
-                                        {{ element_2.card_2_title }}
-                                    </a>
-                                </h5>
-                                <p class="card-text home-resources-text">
-                                    {{ element_2.card_2_text }}
-                                </p>
-                                <p class="mt-auto">
-                                    <a
-                                        class="btn basic-arche-btn home-resources-btn"
-                                        href="{{ element_2.card_2_url }}"
-                                        >
-                                        Show
-                                    </a>
-                                </p>
+                                <div class="w-full max-w-sm">
+                                    <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                                        <div class="mb-6 flex items-center justify-center">
+                                            <img
+                                                class="card-img-top home-resources-images w-full h-auto"
+                                                src="{{ element_2.card_2_image }}"
+                                                alt="{{ element_2.card_2_title }}"
+                                                width="165"
+                                                height="136"
+                                                />
+                                        </div>
+                                        <div class="card-body home-resources-body p-4">
+                                            <h5 class="card-title mb-3 text-center">
+                                                <a
+                                                    class="home-resources-title"
+                                                    href="{{ element_2.card_2_url }}"
+                                                    >
+
+                                                    {{ element_2.card_2_title }}
+                                                </a>
+                                            </h5>
+                                            <p class="card-text home-resources-text">
+                                                {{ element_2.card_2_text }}
+                                            </p>
+                                            <p class="mt-auto">
+                                                <a
+                                                    class="btn basic-arche-btn home-resources-btn"
+                                                    href="{{ element_2.card_2_url }}"
+                                                    >
+                                                    Show
+                                                </a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="w-full max-w-sm">
+                                    <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                                        <div class="mb-6 flex items-center justify-center">
+                                            <img
+                                                class="card-img-top home-resources-images w-full h-auto"
+                                                src="{{ element_2.card_3_image }}"
+                                                alt="{{ element_2.card_3_title }}"
+                                                width="165"
+                                                height="134"
+                                                />
+                                        </div>
+                                        <div class="card-body home-resources-body p-4">
+                                            <h5 class="card-title mb-3 text-center">
+                                                <a
+                                                    class="home-resources-title"
+                                                    href="{{ element_2.card_3_url }}"
+                                                    >
+                                                    {{ element_2.card_3_title }}
+                                                </a>
+                                            </h5>
+                                            <p class="card-text home-resources-text">
+                                                {{ element_2.card_3_text }}
+                                            </p>
+                                            <p class="mt-auto">
+                                                <a
+                                                    class="btn basic-arche-btn home-resources-btn"
+                                                    href="{{ element_2.card_3_url }}"
+                                                    >
+                                                    Show
+                                                </a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-span-3 lg:col-span-3 xl:col-span-3 mb-12">
-                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                            <div class="mb-6 flex items-center justify-center">
-                                <img
-                                    class="card-img-top home-resources-images w-full h-auto"
-                                    src="{{ element_2.card_3_image }}"
-                                    alt="{{ element_2.card_3_title }}"
-                                    width="165"
-                                    height="134"
-                                    />
-                            </div>
-                            <div class="card-body home-resources-body p-4">
-                                <h5 class="card-title mb-3 text-center">
-                                    <a
-                                        class="home-resources-title"
-                                        href="{{ element_2.card_3_url }}"
-                                        >
-                                        {{ element_2.card_3_title }}
-                                    </a>
-                                </h5>
-                                <p class="card-text home-resources-text">
-                                    {{ element_2.card_3_text }}
-                                </p>
-                                <p class="mt-auto">
-                                    <a
-                                        class="btn basic-arche-btn home-resources-btn"
-                                        href="{{ element_2.card_3_url }}"
-                                        >
-                                        Show
-                                    </a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
