--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -46,9 +46,8 @@
     <div class="grid grid-cols-6 gap-4 resources-container-home">
         <div class="col-span-4 col-start-2">
             <div class="w-full">
-                <div class="grid grid-cols-12 gap-4">     
-                    <!-- CARD -->
-                    <div class="col-span-12 lg:col-span-3 lg:col-start-2 xl:col-span-3 xl:col-start-3">
+                <div class="grid grid-cols-12 gap-6">                
+                    <div class="col-span-3 col-start-2 lg:col-span-3 xl:col-span-3 mb-12">
                         <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
                             <div class="mb-6 flex items-center justify-center">
                                 <img
@@ -82,8 +81,7 @@
                             </div>
                         </div>
                     </div>
-                    
-                    <div class="col-span-12 lg:col-span-3 xl:col-span-3">
+                    <div class="col-span-3 lg:col-span-3 xl:col-span-3 mb-12">
                         <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
                             <div class="mb-6 flex items-center justify-center">
                                 <img
@@ -118,7 +116,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-span-12 lg:col-span-3 xl:col-span-3">
+                    <div class="col-span-3 lg:col-span-3 xl:col-span-3 mb-12">
                         <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
                             <div class="mb-6 flex items-center justify-center">
                                 <img
