--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -46,8 +46,9 @@
     <div class="grid grid-cols-6 gap-4 resources-container-home">
         <div class="col-span-4 col-start-2">
             <div class="w-full">
-                <div class="grid grid-cols-12 gap-6">                
-                    <div class="col-span-3 col-start-2 lg:col-span-3 xl:col-span-3 mb-12">
+                <!-- ROW becomes flex, not 12-col grid -->
+                <div class="flex flex-wrap justify-center gap-6">
+                    <div class="w-full sm:w-1/2 lg:w-1/3 xl:w-1/4 mb-12">
                         <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
                             <div class="mb-6 flex items-center justify-center">
                                 <img
@@ -81,7 +82,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-span-3 lg:col-span-3 xl:col-span-3 mb-12">
+                    <div class="w-full sm:w-1/2 lg:w-1/3 xl:w-1/4 mb-12">
                         <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
                             <div class="mb-6 flex items-center justify-center">
                                 <img
@@ -116,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-span-3 lg:col-span-3 xl:col-span-3 mb-12">
+                    <div class="w-full sm:w-1/2 lg:w-1/3 xl:w-1/4 mb-12">
                         <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
                             <div class="mb-6 flex items-center justify-center">
                                 <img
