--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -46,10 +46,11 @@
     <div class="grid grid-cols-6 gap-4 resources-container-home">
         <div class="col-span-4 col-start-2">
             <div class="w-full">
-                <!-- ROW becomes flex, not 12-col grid -->
-                <div class="flex flex-wrap justify-center gap-6">
-                    <div class="w-full sm:w-1/2 lg:w-1/3 xl:w-1/4 mb-12">
-                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                <!-- columns sized by content (18rem ~ 288px), centered as a block -->
+                <div class="grid grid-flow-col auto-cols-[18rem] gap-6 justify-center">
+                    <div>
+                        <div class="w-[18rem] rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+
                             <div class="mb-6 flex items-center justify-center">
                                 <img
                                     class="card-img-top home-resources-images w-full h-auto"
@@ -82,8 +83,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-full sm:w-1/2 lg:w-1/3 xl:w-1/4 mb-12">
-                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+
+                    <div >
+                        <div class="w-[18rem] rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+
                             <div class="mb-6 flex items-center justify-center">
                                 <img
                                     class="card-img-top home-resources-images w-full h-auto"
@@ -117,8 +120,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-full sm:w-1/2 lg:w-1/3 xl:w-1/4 mb-12">
-                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                    <div >
+                        <div class="w-[18rem] rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+
                             <div class="mb-6 flex items-center justify-center">
                                 <img
                                     class="card-img-top home-resources-images w-full h-auto"
@@ -180,48 +184,10 @@
                 <div class="w-full collections-container">
                     <div class="w-full">
                         <div class="container">
-                            <div class="loader" id="home-slider-loader">
-                                &nbsp;
-                            </div>
-                            Slider
                             <div
                                 data-component="carousel"
                                 data-endpoint="/api/topcollections/12/en"
                                 >
-                            </div>
-
-                            <div
-                                class="carousel slide"
-                                id="multi-item-carousel"
-                                data-bs-ride="carousel"
-                                >
-                                <div class="carousel-inner">&nbsp;</div>
-                                <p class="mt-4">
-                                    <button
-                                        class="carousel-control-prev"
-                                        type="button"
-                                        data-bs-target="#multi-item-carousel"
-                                        data-bs-slide="prev"
-                                        >
-                                        <span
-                                            class="carousel-control-prev-icon"
-                                            aria-hidden="true"
-                                            ></span>
-                                        <span class="visually-hidden">Previous</span>
-                                    </button>
-                                    <button
-                                        class="carousel-control-next"
-                                        type="button"
-                                        data-bs-target="#multi-item-carousel"
-                                        data-bs-slide="next"
-                                        >
-                                        <span
-                                            class="carousel-control-next-icon"
-                                            aria-hidden="true"
-                                            ></span>
-                                        <span class="visually-hidden">Next</span>
-                                    </button>
-                                </p>
                             </div>
                         </div>
                     </div>
