--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -46,11 +46,9 @@
     <div class="grid grid-cols-6 gap-4 resources-container-home">
         <div class="col-span-4 col-start-2">
             <div class="w-full">
-                <!-- columns sized by content (18rem ~ 288px), centered as a block -->
-                <div class="grid grid-flow-col auto-cols-[18rem] gap-6 justify-center">
-                    <div>
-                        <div class="w-[18rem] rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-
+                <div class="grid grid-cols-12 gap-6">                
+                <div class="col-span-12 lg:col-span-4 xl:col-span-3 mb-12">
+                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
                             <div class="mb-6 flex items-center justify-center">
                                 <img
                                     class="card-img-top home-resources-images w-full h-auto"
@@ -83,10 +81,8 @@
                             </div>
                         </div>
                     </div>
-
-                    <div >
-                        <div class="w-[18rem] rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-
+              <div class="col-span-3 text-center">
+                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
                             <div class="mb-6 flex items-center justify-center">
                                 <img
                                     class="card-img-top home-resources-images w-full h-auto"
@@ -120,9 +116,8 @@
                             </div>
                         </div>
                     </div>
-                    <div >
-                        <div class="w-[18rem] rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-
+              <div class="col-span-3 text-center">
+                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
                             <div class="mb-6 flex items-center justify-center">
                                 <img
                                     class="card-img-top home-resources-images w-full h-auto"
@@ -184,11 +179,14 @@
                 <div class="w-full collections-container">
                     <div class="w-full">
                         <div class="container">
+                            
                             <div
                                 data-component="carousel"
                                 data-endpoint="/api/topcollections/12/en"
                                 >
                             </div>
+
+                            
                         </div>
                     </div>
                 </div>
