--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -44,116 +44,87 @@
     </div>
 
     <div class="grid grid-cols-6 gap-4 resources-container-home">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="grid grid-cols-12 gap-6">                
-                <div class="col-span-12 lg:col-span-4 xl:col-span-3 mb-12">
-                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                            <div class="mb-6 flex items-center justify-center">
-                                <img
-                                    class="card-img-top home-resources-images w-full h-auto"
-                                    src="{{ element_2.card_1_image }}"
-                                    alt="{{ element_2.card_1_title }}"
-                                    width="165"
-                                    height="138"
-                                    />
-                            </div>
-                            <div class="card-body home-resources-body p-4">
-                                <h5 class="card-title mb-3 text-center">
-                                    <a
-                                        class="home-resources-title"
-                                        href="{{ element_2.card_1_url }}"
-                                        >
-                                        {{ element_2.card_1_title }}
-                                    </a>
-                                </h5>
-                                <p class="card-text home-resources-text">
-                                    {{ element_2.card_1_text }}
-                                </p>
-                                <p class="mt-auto">
-                                    <a
-                                        class="btn basic-arche-btn home-resources-btn"
-                                        href="{{ element_2.card_1_url }}"
-                                        >
-                                        Show
-                                    </a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-              <div class="col-span-3 text-center">
-                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                            <div class="mb-6 flex items-center justify-center">
-                                <img
-                                    class="card-img-top home-resources-images w-full h-auto"
-                                    src="{{ element_2.card_2_image }}"
-                                    alt="{{ element_2.card_2_title }}"
-                                    width="165"
-                                    height="136"
-                                    />
-                            </div>
-                            <div class="card-body home-resources-body p-4">
-                                <h5 class="card-title mb-3 text-center">
-                                    <a
-                                        class="home-resources-title"
-                                        href="{{ element_2.card_2_url }}"
-                                        >
-
-                                        {{ element_2.card_2_title }}
-                                    </a>
-                                </h5>
-                                <p class="card-text home-resources-text">
-                                    {{ element_2.card_2_text }}
-                                </p>
-                                <p class="mt-auto">
-                                    <a
-                                        class="btn basic-arche-btn home-resources-btn"
-                                        href="{{ element_2.card_2_url }}"
-                                        >
-                                        Show
-                                    </a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-              <div class="col-span-3 text-center">
-                        <div class="max-w-sm rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                            <div class="mb-6 flex items-center justify-center">
-                                <img
-                                    class="card-img-top home-resources-images w-full h-auto"
-                                    src="{{ element_2.card_3_image }}"
-                                    alt="{{ element_2.card_3_title }}"
-                                    width="165"
-                                    height="134"
-                                    />
-                            </div>
-                            <div class="card-body home-resources-body p-4">
-                                <h5 class="card-title mb-3 text-center">
-                                    <a
-                                        class="home-resources-title"
-                                        href="{{ element_2.card_3_url }}"
-                                        >
-                                        {{ element_2.card_3_title }}
-                                    </a>
-                                </h5>
-                                <p class="card-text home-resources-text">
-                                    {{ element_2.card_3_text }}
-                                </p>
-                                <p class="mt-auto">
-                                    <a
-                                        class="btn basic-arche-btn home-resources-btn"
-                                        href="{{ element_2.card_3_url }}"
-                                        >
-                                        Show
-                                    </a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+  <div class="col-span-4 col-start-2">
+    <div class="w-full">
+      <!-- ROW: 1 col on mobile, 2 on md, 3 on lg; items centered -->
+      <div class="grid gap-6 justify-items-center sm:grid-cols-2 lg:grid-cols-3">
+        
+        <!-- CARD 1 -->
+        <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
+          <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+            <div class="mb-6 flex items-center justify-center">
+              <img class="card-img-top home-resources-images w-full h-auto"
+                   src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
+                   width="165" height="138">
             </div>
+            <div class="card-body home-resources-body p-4">
+              <h5 class="card-title mb-3 text-center">
+                <a class="home-resources-title" href="{{ element_2.card_1_url }}">
+                  {{ element_2.card_1_title }}
+                </a>
+              </h5>
+              <p class="card-text home-resources-text">
+                {{ element_2.card_1_text }}
+              </p>
+              <p class="mt-auto">
+                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
+              </p>
+            </div>
+          </div>
         </div>
+
+        <!-- CARD 2 -->
+        <div class="w-full max-w-sm">
+          <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+            <div class="mb-6 flex items-center justify-center">
+              <img class="card-img-top home-resources-images w-full h-auto"
+                   src="{{ element_2.card_2_image }}" alt="{{ element_2.card_2_title }}"
+                   width="165" height="136">
+            </div>
+            <div class="card-body home-resources-body p-4">
+              <h5 class="card-title mb-3 text-center">
+                <a class="home-resources-title" href="{{ element_2.card_2_url }}">
+                  {{ element_2.card_2_title }}
+                </a>
+              </h5>
+              <p class="card-text home-resources-text">
+                {{ element_2.card_2_text }}
+              </p>
+              <p class="mt-auto">
+                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_2_url }}">Show</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- CARD 3 -->
+        <div class="w-full max-w-sm">
+          <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+            <div class="mb-6 flex items-center justify-center">
+              <img class="card-img-top home-resources-images w-full h-auto"
+                   src="{{ element_2.card_3_image }}" alt="{{ element_2.card_3_title }}"
+                   width="165" height="134">
+            </div>
+            <div class="card-body home-resources-body p-4">
+              <h5 class="card-title mb-3 text-center">
+                <a class="home-resources-title" href="{{ element_2.card_3_url }}">
+                  {{ element_2.card_3_title }}
+                </a>
+              </h5>
+              <p class="card-text home-resources-text">
+                {{ element_2.card_3_text }}
+              </p>
+              <p class="mt-auto">
+                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_3_url }}">Show</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
+  </div>
+</div>
 
     <div class="grid grid-cols-6 gap-4 ">
         <div class="col-span-4 col-start-2">
