--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="w-full flex justify-center  bg-[url('/images/common/resource_bottom_bubble.svg')] resources-container-home">
+    <div class="w-full flex justify-center resources-container-home">
         <div class="container">
             <div class="grid grid-cols-6 gap-4">
                 <div class="col-span-4 col-start-2">
