--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -24,11 +24,11 @@
             </div>
         </div>
     </div>
-
-    <div class="w-full flex justify-center resources-container-home">
+    
+    <div class="w-full flex justify-center">
         <div class="container">
             <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
+                  <div class="col-span-4 col-start-2">
                     <div class="w-full">
                         <div class="my-12 text-center">
                             <p class="section-header-title-small"> {{ element_1.title_small }}</p>
@@ -36,6 +36,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="w-full flex justify-center resources-container-home">
+        <div class="container">
+            <div class="grid grid-cols-6 gap-4">              
 
                 <div class="col-span-4 col-start-2">
                     <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 items-stretch">
