--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -191,7 +191,7 @@
                                 </div>
                             </div>
 
-                            <div class="grid grid-cols-12 items-center mt-6">
+                            <div class="grid grid-cols-12 items-center mt-6 w-full">
                                 <div class="col-span-12 lg:col-span-6">
                                     <a
                                         class="btn btn-arche-blue"
@@ -205,7 +205,7 @@
                                         <div class="grid grid-cols-3 text-center items-center">
                                             <div>
                                                 <img
-                                                    class="img-fluid w-full h-auto"
+                                                    class="max-w-full h-auto"
                                                     src="/browser/images/logos/mission-acdh-logo.png"
                                                     alt="..."
                                                     width="56"
@@ -214,7 +214,7 @@
                                             </div>
                                             <div>
                                                 <img
-                                                    class="img-fluid w-full h-auto"
+                                                    class="max-w-full h-auto"
                                                     src="/browser/images/logos/mission-oaw-logo.png"
                                                     alt="..."
                                                     width="120"
@@ -223,7 +223,7 @@
                                             </div>
                                             <div>
                                                 <img
-                                                    class="img-fluid w-full h-auto"
+                                                    class="max-w-full h-auto"
                                                     src="/browser/images/logos/mission-arche-logo.png"
                                                     alt="..."
                                                     width="120"
