--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -125,7 +125,7 @@
 
 
 
-    <div class="grid grid-cols-6 gap-4 ">
+    <div class="grid grid-cols-6 gap-4 arche-home-collections-slider">
         <div class="col-span-4 col-start-2">
             <div class="w-full">
                 <div class="my-12 text-center">
