--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -40,86 +40,87 @@
         </div>
     </div>
 
+
     <div class="w-full flex justify-center resources-container-home">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">              
 
-                <div class="col-span-4 col-start-2">
-                    <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 items-stretch">
+        <div class="grid grid-cols-6 gap-4">              
 
-                        <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
-                            <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                                <div class="mb-6 flex items-center justify-center">
-                                    <img class="card-img-top home-resources-images w-full h-auto"
-                                         src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
-                                         width="165" height="138">
-                                </div>
-                                <div class="card-body home-resources-body p-4">
-                                    <h5 class="card-title mb-3 text-center">
-                                        <a class="home-resources-title" href="{{ element_2.card_1_url }}">
-                                            {{ element_2.card_1_title }}
-                                        </a>
-                                    </h5>
-                                    <p class="card-text home-resources-text">
-                                        {{ element_2.card_1_text }}
-                                    </p>
-                                    <p class="mt-auto">
-                                        <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
-                                    </p>
-                                </div>
+            <div class="col-span-4 col-start-2">
+                <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 items-stretch">
+
+                    <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
+                        <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                            <div class="mb-6 flex items-center justify-center">
+                                <img class="card-img-top home-resources-images w-full h-auto"
+                                     src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
+                                     width="165" height="138">
+                            </div>
+                            <div class="card-body home-resources-body p-4">
+                                <h5 class="card-title mb-3 text-center">
+                                    <a class="home-resources-title" href="{{ element_2.card_1_url }}">
+                                        {{ element_2.card_1_title }}
+                                    </a>
+                                </h5>
+                                <p class="card-text home-resources-text">
+                                    {{ element_2.card_1_text }}
+                                </p>
+                                <p class="mt-auto">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
+                                </p>
                             </div>
                         </div>
+                    </div>
 
 
-                        <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
-                            <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                                <div class="mb-6 flex items-center justify-center">
-                                    <img class="card-img-top home-resources-images w-full h-auto"
-                                         src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
-                                         width="165" height="138">
-                                </div>
-                                <div class="card-body home-resources-body p-4">
-                                    <h5 class="card-title mb-3 text-center">
-                                        <a class="home-resources-title" href="{{ element_2.card_1_url }}">
-                                            {{ element_2.card_1_title }}
-                                        </a>
-                                    </h5>
-                                    <p class="card-text home-resources-text">
-                                        {{ element_2.card_1_text }}
-                                    </p>
-                                    <p class="mt-auto">
-                                        <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
-                                    </p>
-                                </div>
+                    <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
+                        <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                            <div class="mb-6 flex items-center justify-center">
+                                <img class="card-img-top home-resources-images w-full h-auto"
+                                     src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
+                                     width="165" height="138">
+                            </div>
+                            <div class="card-body home-resources-body p-4">
+                                <h5 class="card-title mb-3 text-center">
+                                    <a class="home-resources-title" href="{{ element_2.card_1_url }}">
+                                        {{ element_2.card_1_title }}
+                                    </a>
+                                </h5>
+                                <p class="card-text home-resources-text">
+                                    {{ element_2.card_1_text }}
+                                </p>
+                                <p class="mt-auto">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
+                                </p>
                             </div>
                         </div>
+                    </div>
 
 
-                        <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
-                            <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                                <div class="mb-6 flex items-center justify-center">
-                                    <img class="card-img-top home-resources-images w-full h-auto"
-                                         src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
-                                         width="165" height="138">
-                                </div>
-                                <div class="card-body home-resources-body p-4">
-                                    <h5 class="card-title mb-3 text-center">
-                                        <a class="home-resources-title" href="{{ element_2.card_1_url }}">
-                                            {{ element_2.card_1_title }}
-                                        </a>
-                                    </h5>
-                                    <p class="card-text home-resources-text">
-                                        {{ element_2.card_1_text }}
-                                    </p>
-                                    <p class="mt-auto">
-                                        <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
-                                    </p>
-                                </div>
+                    <div class="w-full max-w-sm">   <!-- centers because of justify-items-center + max width -->
+                        <div class="rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                            <div class="mb-6 flex items-center justify-center">
+                                <img class="card-img-top home-resources-images w-full h-auto"
+                                     src="{{ element_2.card_1_image }}" alt="{{ element_2.card_1_title }}"
+                                     width="165" height="138">
+                            </div>
+                            <div class="card-body home-resources-body p-4">
+                                <h5 class="card-title mb-3 text-center">
+                                    <a class="home-resources-title" href="{{ element_2.card_1_url }}">
+                                        {{ element_2.card_1_title }}
+                                    </a>
+                                </h5>
+                                <p class="card-text home-resources-text">
+                                    {{ element_2.card_1_text }}
+                                </p>
+                                <p class="mt-auto">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_2.card_1_url }}">Show</a>
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
@@ -143,21 +144,24 @@
         </div>
     </div>
 
-    <div class="grid grid-cols-6 gap-4 arche-home-collections-slider ">
-        <div class="grid grid-cols-6 gap-4"> 
-            <div class="col-span-4 col-start-2">
-                <div class="w-full">
-                    <div class="w-full collections-container">
-                        <div class="w-full">
-                            <div class="container">
+    <div class="w-full flex justify-center mission-container-home">
 
-                                <div
-                                    data-component="carousel"
-                                    data-endpoint="/api/topcollections/12/en"
-                                    >
+        <div class="grid grid-cols-6 gap-4 arche-home-collections-slider ">
+            <div class="grid grid-cols-6 gap-4"> 
+                <div class="col-span-4 col-start-2">
+                    <div class="w-full">
+                        <div class="w-full collections-container">
+                            <div class="w-full">
+                                <div class="container">
+
+                                    <div
+                                        data-component="carousel"
+                                        data-endpoint="/api/topcollections/12/en"
+                                        >
+                                    </div>
+
+
                                 </div>
-
-
                             </div>
                         </div>
                     </div>
