--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -1,38 +1,41 @@
 <div class="w-full justify-center">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    <p class="section-header-title-small">
-                        {{ element_1.title_small }}
-                    </p>
-                    <h2 class="section-header-title"> {{ element_1.title }}</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-3 ">
-                    <div class="text-center"> {{ element_1.content_left }}</div>
-                </div>
-                <div class="col-span-3 gap-6 ">
-                    <div class="flex flex-col gap-6"> {{ element_1.content_right }}</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <p class="section-header-title-small"> {{ element_1.title_small }}</p>
-                            <h2 class="section-header-title"> {{ element_2.title }}</h2>
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                        <p class="section-header-title-small">
+                            {{ element_1.title_small }}
+                        </p>
+                        <h2 class="section-header-title"> {{ element_1.title }}</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full flex justify-center">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="grid grid-cols-6 gap-4">
+                    <div class="col-span-3 ">
+                        <div class="text-center"> {{ element_1.content_left }}</div>
+                    </div>
+                    <div class="col-span-3 gap-6 ">
+                        <div class="flex flex-col gap-6"> {{ element_1.content_right }}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="w-full flex justify-center">
+            <div class="container">
+                <div class="grid grid-cols-6 gap-4">
+                    <div class="col-span-4 col-start-2">
+                        <div class="w-full">
+                            <div class="my-12 text-center">
+                                <p class="section-header-title-small"> {{ element_1.title_small }}</p>
+                                <h2 class="section-header-title"> {{ element_2.title }}</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
