--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -147,7 +147,7 @@
         </div>
     </div>
 
-    <div class="w-full flex justify-center mission-container-home">
+    <div class="w-full flex justify-center">
 
         <div class="grid grid-cols-6 gap-4 arche-home-collections-slider ">
             <div class="grid grid-cols-6 gap-4"> 
