--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -147,29 +147,28 @@
         </div>
     </div>
 
-    <div class="w-full flex justify-center">
+    <div class="w-full flex justify-center arche-home-collections-slider ">
 
-        <div class="grid grid-cols-6 gap-4 arche-home-collections-slider ">
-            <div class="grid grid-cols-6 gap-4"> 
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="w-full collections-container">
-                            <div class="w-full">
-                                <div class="container">
+        <div class="grid grid-cols-6 gap-4 ">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="w-full collections-container">
+                        <div class="w-full">
+                            <div class="container">
 
-                                    <div
-                                        data-component="carousel"
-                                        data-endpoint="/api/topcollections/12/en"
-                                        >
-                                    </div>
-
-
+                                <div
+                                    data-component="carousel"
+                                    data-endpoint="/api/topcollections/12/en"
+                                    >
                                 </div>
+
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
