--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -140,7 +140,7 @@
                         class="section-header-title"
                         id="deposit-discover-and-reuse-data"
                         >
-                        {{ element_3.title }}
+                        {{ element_3.title }} - title
                     </h2>
                 </div>
             </div>
