--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -140,7 +140,7 @@
                         class="section-header-title"
                         id="deposit-discover-and-reuse-data"
                         >
-                        {{ element_3.title }} - title
+                        {{ element_3.title }}
                     </h2>
                 </div>
             </div>
@@ -148,25 +148,22 @@
     </div>
 
     <div class="w-full flex justify-center arche-home-collections-slider ">
-
-        <div class="grid grid-cols-6 gap-4 ">
+        <div class="grid grid-cols-6 gap-4 ">            
             <div class="col-span-4 col-start-2">
                 <div class="w-full">
-                    <div class="w-full collections-container">
-                        <div class="w-full">
-                            <div class="container">
 
-                                <div
-                                    data-component="carousel"
-                                    data-endpoint="/api/topcollections/12/en"
-                                    >
-                                </div>
+                    <div class="container collections-container">
 
-
-                            </div>
+                        <div
+                            data-component="carousel"
+                            data-endpoint="/api/topcollections/12/en"
+                            >
                         </div>
+
+
                     </div>
                 </div>
+
             </div>
 
         </div>
