--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -145,7 +145,7 @@
                         class="section-header-title"
                         id="deposit-discover-and-reuse-data"
                         >
-                        {{ element_3.title }}
+                        {{ element_3.title }} - aaa
                     </h2>
                 </div>
             </div>
