--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -1,20 +1,25 @@
 <!-- Element 1 -->
-<div class="container-fluid bg-white m-0 p-0">
-    <div class="container maxw-980 bg-white">
-        <div class="row gx-5 justify-content-center">
-            <div class="col">
-                <div class="my-5 text-center">
-                    <h5 class="section-header-title-small">
+
+<div class="w-full flex justify-center bg-white">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                       <h5 class="section-header-title-small">
                         {{ element_1.header_title_small }} 
                     </h5>
                     <h2 id="how-does-the-data-deposition-work" class="section-header-title">
                         {{ element_1.header_title }}
                         <a href="#how-does-the-data-deposition-work" class="anchor-link" aria-label="Link to this section: How does the data deposition work?">#</a>
                     </h2>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+</div>
+
+<div class="container-fluid bg-white m-0 p-0">
+    
     <div class="container maxw-980 bg-white padding-bottom24">
         <div class="row gx-5 justify-content-center">
             <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
