--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -1,21 +1,21 @@
 <!-- Element 1 -->
 
 <div class="w-full flex justify-center bg-white">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full">
-                    <div class="my-12 text-center">
-                       <h5 class="section-header-title-small">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
+                    <h5 class="section-header-title-small">
                         {{ element_1.header_title_small }} 
                     </h5>
                     <h2 id="how-does-the-data-deposition-work" class="section-header-title">
                         {{ element_1.header_title }}
                         <a href="#how-does-the-data-deposition-work" class="anchor-link" aria-label="Link to this section: How does the data deposition work?">#</a>
                     </h2>
-                    </div>
                 </div>
             </div>
         </div>
+    </div>
 </div>
 
 <div class="w-full flex justify-center bg-white">
@@ -26,7 +26,7 @@
                     {{ element_1.video_url }}
                 </div>
                 <div class="col-span-3">
-                     <p class="">
+                    <p class="">
                         {{ element_1.text }}
                     </p>
                 </div>
@@ -34,7 +34,20 @@
         </div>
     </div>
 </div>
+<div class="w-full flex justify-center bg-white">
+    <div class="w-full bubble-line-container pt-2">
+        <div class="image-wrapper">
+            <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="1600" height="36">
+        </div>
+    </div>
+</div>
 
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div class="rounded-lg border p-4"> {{ element_1.video_url }}</div>
+        <div class="rounded-lg border p-4">  {{ element_1.text }}</div>
+    </div>
+</div>
 
 <!-- Element 2 - ACCORDION -->
 
@@ -56,7 +69,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                         {{ element_2.accordion_2_title }}                                                                                                                                                                                                             </button>
+                        {{ element_2.accordion_2_title }}                                                                                                                                                                                                             </button>
                 </h2>
                 <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionDiv">
                     <div class="accordion-body">
@@ -67,7 +80,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                         {{ element_2.accordion_3_title }}       
+                        {{ element_2.accordion_3_title }}       
                     </button>
                 </h2>
                 <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionDiv">
@@ -85,7 +98,7 @@
                 <div class="accordion-collapse collapse" id="collapseFour" aria-labelledby="headingFour" data-bs-parent="#accordionDiv">
                     <div class="accordion-body">
                         {{ element_2.accordion_4_body }}
-                        
+
                     </div>
                 </div>
             </div>
